<resources>
    <string name="app_name">Places</string>
    <string name="people">People</string>
    <string name="group">Groups</string>
    <string name="events">Events</string>
    <string name="rest">Restaurants</string>
    <string name="cafe">Coffee shops/Bars</string>
    <string name="shopping">Shopping</string>
    <string name="groc">Groceries</string>
    <string name="movies">Movie Theaters</string>
    <string name="invite">Invites</string>
    <string name="sign_out">Sign out</string>
    <string name="delete">Delete your account</string>
    <string name="delete_msg">Are you sure you want to delete your account?
        This action cannot be undone.</string>
    <string name="yes">Delete</string>
    <string name="no">Cancel</string>
</resources>
